[tool.poetry]
name = "transformers-fine-tuning"
version = "0.1.0"
description = ""
authors = ["Atsuki Matsuo <matsuo.de@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.8"
torch = "^1.5.0"
torchtext = "^0.6.0"
transformers = "^2.9.0"
mojimoji = "^0.0.10"
sklearn = "^0.0"
pandas = "^1.0.3"
logzero = "^1.5.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
autopep8 = "^1.5.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
